--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -3292,7 +3292,7 @@
                                               data-checkbox="true"
                                             ></span></span
                                           ><span
-                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf ml-4 dir dir-ltr"
                                           >
                                             <div class="_fbbx3d">
                                               I don’t want to receive marketing
@@ -3340,7 +3340,7 @@
                                                     d="m4 16.5 8 8 16-16"
                                                   ></path></svg></span></span></span
                                           ><span
-                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                            class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf ml-4 dir dir-ltr"
                                           >
                                             <div class="_fbbx3d">
                                               I don’t want to receive marketing
@@ -6662,7 +6662,7 @@
                                             data-checkbox="true"
                                           ></span></span
                                         ><span
-                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf ml-4 dir dir-ltr"
                                         >
                                           <div class="_fbbx3d">
                                             I don’t want to receive marketing
@@ -6710,7 +6710,7 @@
                                                   d="m4 16.5 8 8 16-16"
                                                 ></path></svg></span></span></span
                                         ><span
-                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                          class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y text-black atm_h3_yh40bf ml-4 dir dir-ltr"
                                         >
                                           <div class="_fbbx3d">
                                             I don’t want to receive marketing
