--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -782,7 +782,7 @@
                                                         ">
                                                       <path fill="none" d="m4 16.5 8 8 16-16"></path>
                                                     </svg></span></span></span><span
-                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                                 <div class="o1qa0ptp dir dir-ltr">
                                                   These instructions didn’t
                                                   work
@@ -797,7 +797,7 @@
                                                   name="did_not_find_answer" class="checkbox__input"
                                                   type="checkbox" /><span class="_41yoza"
                                                   data-checkbox="true"></span></span><span
-                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                                 <div class="o1qa0ptp dir dir-ltr">
                                                   I didn’t find the answer to
                                                   my question
@@ -812,7 +812,7 @@
                                                   name="info_confusing_or_unclear" class="checkbox__input"
                                                   type="checkbox" /><span class="_41yoza"
                                                   data-checkbox="true"></span></span><span
-                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                                 <div class="o1qa0ptp dir dir-ltr">
                                                   This info is confusing or
                                                   unclear
@@ -826,7 +826,7 @@
                                                   id="feedback-secondary-options-CheckboxFieldGroup-something_else"
                                                   name="something_else" class="checkbox__input" type="checkbox" /><span
                                                   class="_41yoza" data-checkbox="true"></span></span><span
-                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                                 <div class="o1qa0ptp dir dir-ltr">
                                                   Something else
                                                 </div>
