--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25063,7 +25063,7 @@
                                   id="customization_options-CheckboxFieldGroup-hide_reviews" name="hide_reviews"
                                   class="_1yf4i4f" type="checkbox" /><span class="_41yoza"
                                   data-checkbox="true"></span></span><span
-                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                 <div class="_rzrgtx">
                                   Hide the reviews
                                 </div>
@@ -25075,7 +25075,7 @@
                                   id="customization_options-CheckboxFieldGroup-no_follow" name="no_follow"
                                   class="_1yf4i4f" type="checkbox" /><span class="_41yoza"
                                   data-checkbox="true"></span></span><span
-                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                 <div class="_rzrgtx">
                                   Create “no follow” links
                                 </div>
