--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2362,7 +2362,7 @@
                                             <input id="unread" name="Unread" class="checkbox__input" type="checkbox">
                                             <span class="_41yoza" data-checkbox="true"></span>
                                           </span>
-                                          <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                          <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                             <div class="modal__desc-sm">Unread</div>
                                           </span>
                                         </label>
@@ -2375,7 +2375,7 @@
                                             <input id="starred" name="Starred" class="checkbox__input" type="checkbox">
                                             <span class="_41yoza" data-checkbox="true"></span>
                                           </span>
-                                          <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
+                                          <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf ml-4 dir dir-ltr">
                                             <div class="modal__desc-sm">Starred</div>
                                           </span>
                                         </label>
