--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4249,7 +4249,7 @@
                                                 <div class="_384m8u">
                                                   <div class="_10u42wu"><span aria-busy="true"
                                                       style="display: inline-block; height: 100%; width: 100%;"><span
-                                                        class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb relative atm_e2p1ow_glywfm dir dir-ltr"
+                                                        class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp block  relative atm_e2p1ow_glywfm dir dir-ltr"
                                                         style="height: 100%; width: 100%;"></span></span></div>
                                                   <div>
                                                     <img src="../assets/images/villa-cetinale-gmap.png"
@@ -14237,7 +14237,7 @@
                                               <div class="_384m8u">
                                                 <div class="_10u42wu"><span aria-busy="true"
                                                     style="display: inline-block; height: 100%; width: 100%;"><span
-                                                      class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp atm_9s_1ulexfb relative atm_e2p1ow_glywfm dir dir-ltr"
+                                                      class="atm_12_q7pw6w atm_16_12c5xpv atm_u_1yy80mb atm_y_9cwzv5 atm_1c_2rgkoi atm_k4_7tcf61 atm_1k_1ytfnp0 atm_2d_1r31cwp block  relative atm_e2p1ow_glywfm dir dir-ltr"
                                                       style="height: 100%; width: 100%;"></span></span></div>
 
                                                 <div>
