--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6960,7 +6960,7 @@
                                                   class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                 >
                                                   <span
-                                                    class="flex f-items-center atm_9s_1txwivl atm_7l_18pqv07 atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_8ycq01 atm_g3_adnk3f dir dir-ltr"
+                                                    class="flex f-items-center flex atm_7l_18pqv07 atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_8ycq01 atm_g3_adnk3f dir dir-ltr"
                                                     ><span class="atm_h0_exct8b dir dir-ltr"
                                                       ><svg
                                                         viewBox="0 0 32 32"
