--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -13163,14 +13163,14 @@
                                 </div>
                                </div>
                               <div class="s1f23tw1 dir dir-ltr" style="--s1f23tw1-3: 40px; --s1f23tw1-4: 24px; --s1f23tw1-5: auto; --s1f23tw1-6: 24px; --s1f23tw1-7: absolute; --s1f23tw1-8: 1; --s1f23tw1-9: 81px;">
-                              <button aria-label="Zoom in" data-testid="map/ZoomInButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx c1y4i074 dir dir-ltr">
+                              <button aria-label="Zoom in" data-testid="map/ZoomInButton" type="button" class="btn-map-ctrl btn-map-ctrl-size btn-map-ctrl-base c1y4i074 dir dir-ltr">
                                 <svg viewBox="0 0 16 16" height="16" width="16" fill="currentColor" focusable="false" aria-hidden="true" role="presentation">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M7 1a1 1 0 0 1 2 0v14a1 1 0 1 1-2 0V1z"></path>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"></path>
                                 </svg>
                               </button>
                               <div class="c1fisx1o dir dir-ltr"></div>
-                              <button aria-label="Zoom out" data-testid="map/ZoomOutButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx c1y4i074 dir dir-ltr">
+                              <button aria-label="Zoom out" data-testid="map/ZoomOutButton" type="button" class="btn-map-ctrl btn-map-ctrl-size btn-map-ctrl-base c1y4i074 dir dir-ltr">
                                 <svg viewBox="0 0 16 16" height="16" width="16" fill="currentColor" focusable="false" aria-hidden="true" role="presentation">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"></path>
                                 </svg>
