--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -7011,7 +7011,7 @@
                                           <div class="o47luuh o1q97y5m dir dir-ltr">
                                             <div class="tsz9f4o dir dir-ltr">
                                             <div class="t1p13dzz dir dir-ltr">
-                                              <div class="b1b9hiva r14mr20j dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="t1mwk1n0 dir dir-ltr">Superhost</div></div>
+                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="ts9x1g6 dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -7969,7 +7969,7 @@
                                           <div class="o47luuh o1q97y5m dir dir-ltr">
                                             <div class="tsz9f4o dir dir-ltr">
                                             <div class="t1p13dzz dir dir-ltr">
-                                              <div class="b1b9hiva r14mr20j dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="t1mwk1n0 dir dir-ltr">Superhost</div></div>
+                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="ts9x1g6 dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -9208,7 +9208,7 @@
                                           <div class="o47luuh o1q97y5m dir dir-ltr">
                                             <div class="tsz9f4o dir dir-ltr">
                                             <div class="t1p13dzz dir dir-ltr">
-                                              <div class="b1b9hiva r14mr20j dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="t1mwk1n0 dir dir-ltr">Superhost</div></div>
+                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="ts9x1g6 dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -12552,7 +12552,7 @@
                                           <div class="o47luuh o1q97y5m dir dir-ltr">
                                             <div class="tsz9f4o dir dir-ltr">
                                             <div class="t1p13dzz dir dir-ltr">
-                                              <div class="b1b9hiva r14mr20j dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="t1mwk1n0 dir dir-ltr">Superhost</div></div>
+                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="ts9x1g6 dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -12859,7 +12859,7 @@
                                           <div class="o47luuh o1q97y5m dir dir-ltr">
                                             <div class="tsz9f4o dir dir-ltr">
                                             <div class="t1p13dzz dir dir-ltr">
-                                              <div class="b1b9hiva r14mr20j dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="t1mwk1n0 dir dir-ltr">Superhost</div></div>
+                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="ts9x1g6 dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
