--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -7011,7 +7011,7 @@
                                           <div class="o47luuh card-alt-1__controls dir dir-ltr">
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr">
-                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
+                                              <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -7969,7 +7969,7 @@
                                           <div class="o47luuh card-alt-1__controls dir dir-ltr">
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr">
-                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
+                                              <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -9208,7 +9208,7 @@
                                           <div class="o47luuh card-alt-1__controls dir dir-ltr">
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr">
-                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
+                                              <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -12552,7 +12552,7 @@
                                           <div class="o47luuh card-alt-1__controls dir dir-ltr">
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr">
-                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
+                                              <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
@@ -12859,7 +12859,7 @@
                                           <div class="o47luuh card-alt-1__controls dir dir-ltr">
                                             <div class="card-alt-1__controls-top dir dir-ltr">
                                             <div class="card-alt-1__controls-top-left dir dir-ltr">
-                                              <div class="b1b9hiva plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
+                                              <div class="margin__ltr plus__btn dir dir-ltr" style="--formatted-badge_text-color: #222222;"><div class="plus__btn-text dir dir-ltr">Superhost</div></div>
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked cendrgz dir dir-ltr">
