--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -7015,7 +7015,7 @@
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -7341,7 +7341,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -7647,7 +7647,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -7973,7 +7973,7 @@
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -8299,7 +8299,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -8602,7 +8602,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -8907,7 +8907,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -9212,7 +9212,7 @@
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -9515,7 +9515,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -9821,7 +9821,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -10127,7 +10127,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -10430,7 +10430,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -10733,7 +10733,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -11041,7 +11041,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -11347,7 +11347,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -11653,7 +11653,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -11945,7 +11945,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -12248,7 +12248,7 @@
                                             <div class="card-alt-1__controls-top-left dir dir-ltr"></div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -12556,7 +12556,7 @@
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -12863,7 +12863,7 @@
                                             </div>
                                             <div class="card-alt-1__controls-top-right dir dir-ltr">
                                               <div class="ckqgked card-alt-1__btn-save-wrapper-var dir dir-ltr">
-                                              <button aria-label="Add to wishlist" type="button" class="bq05a0m vq7srz5 dir dir-ltr">
+                                              <button aria-label="Add to wishlist" type="button" class="btn-save btn-save dir dir-ltr">
                                                 <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
